{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "78bd37d4-a9e6-4bb1-be39-3ca5b246eb22",
            "actions": [
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "164e5f46-41fc-4553-93a4-4e079e79bc62",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "WebRequestGet",
                    "type": "Button",
                    "id": "b1376434-6f3e-44b2-8c17-6e54d1978708",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WebRequestPost",
                    "type": "Button",
                    "id": "0a97a0f0-1c19-469b-b3d1-7c080da249c1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "841733c1-273c-4cca-a456-045ed022ac1e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "abf9fab2-c08f-4c14-9eda-e7cb60504990",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4dc2729f-0624-42f7-845a-06d99cfa88c9",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WebRequestGet",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9b4a3bbe-5a4e-4533-8416-32449055a841",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WebRequestPost",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "42d38871-db6b-4eb6-83d6-e29b72277393",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "New control scheme",
            "bindingGroup": "New control scheme",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}